<resources>
    <!--ncea help activity-->
    <string name="app_name">NCEA Results Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="app_help_str"><![CDATA[This app helps you keep track of your NCEA grades and how you are tracking towards goals you have set. It does not display official results, only what you have entered. For an official transcript see your NZQA account. <br/><br/>To use the app, find the NCEA level you are working towards, and use the add subject button to create your subjects. If you are taking courses (for example work experience), then you can add a separate subject called "courses" to track credits received for this. <br/><br/>Within each subject you can add standards. The details for these are entered manually so make sure you know how many credits the standard is worth. The details can also be edited later if necessary.<br/><br/>To add goal, mock or final grades for a standard, press on the plus sign next to it.<br/><br/>The summary at the top of the subject page details your overall credits for that subjects, as well as how you are tracking for merit and excellence subject endorsements. The summary at the top of the level page shows your overall credits across all subjects at that level and how you are tracking for overall endorsement. For more detailed information about your goal and mock grades, as well as rank score calculations for level 3, click on the results at the top of this page.<br/><br/>For more information on how the various endorsements and rank score are calculated, see NCEA Info]]></string>
    <string name="ncea_info_str"><![CDATA[For official results see your NZQA account. <br/><br/><br/> PASSING REQUIREMENTS: <br/><br/>In order to pass a level of NCEA you must achieve 80 credits. At levels 2 and 3, 20 of these credits can come from a previous level, and the other 60 must be from the level you are taking, or higher. <br/>At level 1 all 80 credits must be level 1 or higher. Additionally at level 1 you must achieve 10 \'numeracy\' and 10 \'literacy\' credits (these can count towards your overall pass as well).<br/>Credits can come from either achievement or unit standards.<br/><br/><br/>OVERALL ENDORSEMENTS: <br/><br/>You can achieve an overall endorsement of your NCEA certificate by achieving 50 credits of sufficient level. 50 excellence credits will gain you an excellence endorsement, and 50 credits of merit or higher level will gain you a merit endorsement. <br/>These credits can be obtained over multiple years, but can not include credits counted up from a previous level. The credits are usually from achievement standards as most unit standards have a maximum grade of achieved, but if you achieve a unit standard at a higher level then this also counts towards endorsement..<br/><br/><br/>SUBJECT ENDORSEMENTS: .<br/><br/>Individual subjects can also be endorsed. <br/>To endorse a subject, 14 credits must be obtained at the required level (excellence level for an excellence endorsement, merit or higher for a merit endorsement). Unlike overall endorsement, these credits must all be obtained within the same year, and at least 3 must come from internals, and 3 more from externals. (The exception to this is PE and maybe art, idk what\'s going on there Google it.) Once again, unit standards count if achieved at a high enough level. <br/><br/><br/>RANK SCORE:<br/><br/>Rank score is an unnecessarily complicated way of assessing how well a level 3 student has done and is a MASSIVE FRICKING PAIN IN THE NECK TO PROGRAM. <br/>Rank score is calculated using your top 20 credits from your top 5 subjects, up to a total of 80 credits. From these credits, excellence credits are worth 4 points, merit 3 and achieved 2. <br/>The maximum rank score is 320 and several university programs, mainly at the University of Auckland and Victoria University have minimum rank scores for entry. <br/><br/>Unlike endorsement, rank score only uses achievement standards, and university approved subjects. If one of your subjects is not university approved, you can enter all of its standards as unit standards instead of achievement standards to prevent the credits from being counted towards rank score. This will not effect anything else about the app.]]></string>
    <string name="suggestions_str"><![CDATA[Any feedback about features that are not working for you, or new ones that you would like added would be greatly appreciated, and can be left either as a review in the Play store, or sent to elfhogan@gmail.com. Please also include what kind of device you are running the app on if you are reporting an error. <br/><br/>Many thanks to those that have sent me feedback. Special thanks to: <br/><br/> Translations: <br/><br/> Alex Sherbone. <br/><br/>Study tip suggestions: <br/><br/> Nathan Farr, Hattie Plant, Alliyah Baluyot, Aashna Sethi, Newton Chan, Laura Wood, Grace McKee.]]> </string>

    <!--settings activity-->
    <string name="settings">Settings</string>
    <string name="current_level">Current Level</string>
    <string name="current_level_descrip">App will open on this level by default.</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="maori">M\u0101ori</string>
    <string name="language_descrip">(This is a work in progress. If you can help with translations, please email me at elfhogan@gmail.com)</string>
    <string name="colorTheme">Colour Theme</string>
    <string name="night">Night</string>
    <string name="day">Day</string>
    <string name="entry_message">TOUCH TO ENTER</string>

</resources>
