<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">
        <ImageView
            android:id="@+id/home"
            android:src="@drawable/home"
            android:layout_width="0dp"
            android:layout_weight="1.8"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_gravity="left"
            android:textSize="40sp"
            android:textColor="?attr/highlightcolor" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_level"
        android:textColor="?attr/textcolor"
        android:textSize="24sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_level_descrip"
        android:textColor="?attr/textcolor"
        android:textSize="14sp"/>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myRadioGroup"
        android:checkedButton="@+id/level2"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/level1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level1"
            android:textColor="?attr/textcolor"
            android:onClick="onRadioClick"/>

        <RadioButton
            android:id="@+id/level2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level2"
            android:textColor="?attr/textcolor"
            android:onClick="onRadioClick"/>

        <RadioButton
            android:id="@+id/level3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level3"
            android:textColor="?attr/textcolor"
            android:onClick="onRadioClick"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textColor="?attr/textcolor"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_descrip"
        android:textColor="?attr/textcolor"
        android:textSize="12sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my2ndRadioGroup"
        android:checkedButton="@+id/english"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textColor="?attr/textcolor"
            android:onClick="onRadioClick"/>

        <RadioButton
            android:id="@+id/maori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maori"
            android:textColor="?attr/textcolor"
            android:onClick="onRadioClick"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/colorTheme"
        android:textColor="?attr/textcolor"
        android:textSize="24sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my3rdRadioGroup"
        android:checkedButton="@+id/english"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/night"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/night"
            android:textColor="?attr/textcolor"
            android:onClick="onColorRadioClick"/>

        <RadioButton
            android:id="@+id/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textColor="?attr/textcolor"
            android:onClick="onColorRadioClick"/>

    </RadioGroup>
</LinearLayout>